--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,139 @@
-* {margin: 0; padding: 0;}
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+* {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  border: 0 none;
+  -webkit-transition: all ease 0.4s;
+  -moz-transition: all ease 0.4s;
+  transition: all ease 0.4s;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background: RGBA(0, 58, 97, 1);
+  font-family: "monospace", sans-serif;
+  font-size: 18px;
+}
+
+h1 {
+  padding-top: 40px;
+  color: #ccf;
+  text-align: center;
+  font-size: 1.8rem;
+  text-shadow: rgba(0, 0, 0, 0.6) 1px 0, rgba(0, 0, 0, 0.6) 1px 0,
+    rgba(0, 0, 0, 0.6) 0 1px, rgba(0, 0, 0, 0.6) 0 1px;
+}
+
+.tree {
+  margin: 20px auto;
+  width: 455px;
+  min-height: auto;
+}
+
+.tree ul {
+  position: relative;
+  padding-top: 20px;
+}
+
+.tree li {
+  position: relative;
+  padding: 20px 3px 0 3px;
+  float: left;
+  text-align: center;
+  list-style-type: none;
+}
+
+.tree li::before,
+.tree li::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 50%;
+  width: 50%;
+  height: 20px;
+  border-top: 1px solid #ccf;
+}
+
+.tree li::after {
+  left: 50%;
+  right: auto;
+  border-left: 1px solid #ccf;
+}
+
+.tree li:only-child::after,
+.tree li:only-child::before {
+  content: "";
+  display: none;
+}
+
+.tree li:only-child {
+  padding-top: 0;
+}
+
+.tree li:first-child::before,
+.tree li:last-child::after {
+  border: 0 none;
+}
+
+.tree li:last-child::before {
+  border-right: 1px solid #ccf;
+  border-radius: 0 5px 0 0;
+}
+
+.tree li:first-child::after {
+  border-radius: 5px 0 0 0;
+}
+
+.tree ul ul::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 50%;
+  border-left: 1px solid #ccf;
+  width: 0;
+  height: 20px;
+}
+
+.tree li a {
+  display: inline-block;
+  padding: 5px 10px;
+  border-radius: 5px;
+  border: 1px solid #ccf;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #fff;
+  font-family: arial, verdana, tahoma;
+  font-size: 11px;
+}
+
+.tree li a:hover,
+.nav li a:hover + ul li a {
+  color: #000;
+  background: #9ed7ff;
+  border: 1px solid #ff3c00;
+}
+
+.tree li a:hover + ul li::after,
+.tree li a:hover + ul li::before,
+.tree li a:hover + ul::before,
+.tree li a:hover + ul ul::before {
+  content: "";
+  border-color: #ff3c00;
+}
+
+/* * {margin: 0; padding: 0;}
 
 .tree ul {
 	padding-top: 20px; position: relative;
@@ -19,7 +154,6 @@
 	-moz-transition: all 0.5s;
 }
 
-/*We will use ::before and ::after to draw the connectors*/
 
 .tree li::before, .tree li::after{
 	content: '';
@@ -32,21 +166,18 @@
 	border-left: 1px solid #ccc;
 }
 
-/*We need to remove left-right connectors from elements without 
-any siblings*/
+
 .tree li:only-child::after, .tree li:only-child::before {
 	display: none;
 }
 
-/*Remove space from the top of single children*/
 .tree li:only-child{ padding-top: 0;}
 
-/*Remove left connector from first child and 
-right connector from last child*/
+
 .tree li:first-child::before, .tree li:last-child::after{
 	border: 0 none;
 }
-/*Adding back the vertical connector to the last nodes*/
+
 .tree li:last-child::before{
 	border-right: 1px solid #ccc;
 	border-radius: 0 5px 0 0;
@@ -59,7 +190,7 @@ right connector from last child*/
 	-moz-border-radius: 5px 0 0 0;
 }
 
-/*Time to add downward connectors from parents*/
+
 .tree ul ul::before{
 	content: '';
 	position: absolute; top: 0; left: 50%;
@@ -85,15 +216,13 @@ right connector from last child*/
 	-moz-transition: all 0.5s;
 }
 
-/*Time for some hover effects*/
-/*We will apply the hover effect the the lineage of the element also*/
 .tree li a:hover, .tree li a:hover+ul li a {
 	background: #c8e4f8; color: #000; border: 1px solid #94a0b4;
 }
-/*Connector styles on hover*/
 .tree li a:hover+ul li::after, 
 .tree li a:hover+ul li::before, 
 .tree li a:hover+ul::before, 
 .tree li a:hover+ul ul::before{
 	border-color:  #94a0b4;
 }
+*/
